<resources>
    <string name="app_name">OrderAppCT5C</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">*Username\'s length must be 8 to 25 characters long</string>
    <string name="invalid_password">*Password must be in length of 8 to 25 characters\nFirst letter is uppercase \nOthers are lowercase letters, numbers, and special character : .^!@#$%*</string>
    <string name="login_button_text">Login</string>
    <string name="Username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up_text_navigation">Don\'t have an account? <b>Sign up</b></string>
    <string name="username_empty">Email must not be empty</string>
    <string name="password_empty">Password must not be empty</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="login_successfully">Login successfully</string>
    <string name="email_hint">Email</string>
    <string name="invalid_email">*This email is invalid</string>
    <string name="sign_up_fail">Sign up fail,please try again later</string>
    <string name="login_fail">Username or password is incorrect</string>
    <string name="signup">Sign up</string>
    <string name="something_wrong">Something wrong happened, please try again later</string>
    <string name="sign_up_successfully"><b>Sign up successfully, please verify your email to activate account</b></string>
    <string name="menu_label">Menu</string>
    <string name="cart_label">Cart</string>
    <string name="personal_label">Personal</string>
    <string name="logout">Logout</string>
    <string name="back_to_login_label">Back to login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_price">$%1$.2f</string>
    <string name="category_label">Category</string>
    <string name="total">Total : $%1$.2f</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="order">Order</string>
    <string name="start_ordering">Start ordering</string>
    <string name="sample_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</string>
    <string name="added">Added to cart</string>
    <string name="dialog_message">Do you really want to remove this item?</string>
    <string name="dialog_title">Remove item</string>
    <string name="dialog_negative">Yes</string>
    <string name="dialog_positive">Cancel</string>
    <string name="add_failed">Added fail</string>
    <string name="phone_label">Phone Number</string>
    <string name="address">Address</string>
    <string name="name_input_invalid">Name can not be empty</string>
    <string name="phone_input_invalid">Phone can not be empty</string>
    <string name="branch_label">Choose a store</string>
    <string name="address_input_invalid">Address can not be empty</string>
    <string name="order_successfully">Order Successfully</string>
    <string name="no_order_item">There\'s nothing in your cart yet</string>
    <string name="order_history">Order history</string>
    <string name="order_id">Order id : %1$d</string>
    <string name="order_destination">Destination : %1$s</string>
    <string name="order_location">Store : %1$s</string>
    <string name="order_status">Status : %1$s</string>
    <string name="order_created_at">Created at : %1$s</string>
    <string name="no_order_history">You haven\'t ordered anything</string>
    <string name="cancel_order">Cancel</string>
    <string name="reset_password">Reset password</string>
    <string name="old_password_label">Old password</string>
    <string name="new_password_label">New password</string>
    <string name="cancelled">Cancelled</string>
    <string name="reset">Reset</string>
    <string name="load_error">Load error</string>
    <string name="server_breakdown">Server breakdown,try again later</string>
    <string name="cancel_fail">Cancel fail</string>
    <string name="removed_fail">Remove fail</string>
    <string name="modify_fail">Modify fail</string>
    <string name="order_fail">Order fail</string>
    <string name="reset_fail">Old password doesn\'t match</string>
</resources>